[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/abilities/grenade/Grenade.gd" type="Script" id=1]
[ext_resource path="res://player/abilities/grenade/Explosion.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id=2]
radius = 0.1
height = 0.2

[node name="Grenade" type="RigidBody3D"]
mass = 20.0
continuous_cd = true
can_sleep = false
script = ExtResource( 1 )
grenade = ExtResource( 2 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="BlinkingLight" type="OmniLight3D" parent="."]
light_color = Color( 1, 0, 0, 1 )
omni_range = 1.0

[node name="LightTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true
[connection signal="timeout" from="LightTimer" to="." method="_on_LightTimer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
